--- a/Release/XBlogGlobal/App_Config/Include/XBlog.Settings.config
+++ b/Release/XBlogGlobal/App_Config/Include/XBlog.Settings.config
@@ -52,6 +52,7 @@ But you can also use "patch:attribute" for clarity:
       
       -->
       <setting name="XBSearchPublishDate" value="publish_date"/>
+      <setting name="XBSearchSubmissionDate" value="submission_date"/>
 
       <!-- Tag Cloud Range
           Percent as number, number is equal to or greater than
