--- a/Sitecore9/stage/website/App_Config/Include/XBlog.Settings.config
+++ b/Sitecore9/stage/website/App_Config/Include/XBlog.Settings.config
@@ -53,9 +53,9 @@ But you can also use "patch:attribute" for clarity:
       -->
       <setting name="XBSearchPublishDate" value="publish_date_tdt"/>
       <setting name="XBSearchSubmissionDate" value="submission_date"/>
-      <setting name="XBSearchAuthor" value="author_t" />
-      <setting name="XBSearchTags" value="tags_t" />
-      <setting name="XBSearchCategory" value="category_t" />
+      <setting name="XBSearchAuthor" value="blog_author_t" />
+      <setting name="XBSearchTags" value="blog_tags_t" />
+      <setting name="XBSearchCategory" value="blog_category_t" />
 
       <!-- Tag Cloud Range
           Percent as number, number is equal to or greater than
