Addition of SOLR support for computed fields.

--- a/Sitecore 9/XBlogGlobal/App_Config/Include/XBlog.Search.Solr.config
+++ b/Sitecore 9/XBlogGlobal/App_Config/Include/XBlog.Search.Solr.config
@@ -1,8 +1,8 @@
-﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <contentSearch>
       <indexConfigurations>
-        <defaultLuceneIndexConfiguration type="Sitecore.ContentSearch.LuceneProvider.LuceneIndexConfiguration, Sitecore.ContentSearch.LuceneProvider">
+        <defaultSolrIndexConfiguration type="Sitecore.ContentSearch.SolrProvider.SolrIndexConfiguration, Sitecore.ContentSearch.SolrProvider">
           <fieldMap>
             <fieldNames hint="raw:AddFieldByFieldName">
               <field fieldName="parsedxblogcategoryname"    storageType="YES"  indexType="TOKENIZED"  vectorType="NO" boost="1f" type="System.String" settingType="Sitecore.ContentSearch.LuceneProvider.LuceneSearchFieldConfiguration, Sitecore.ContentSearch.LuceneProvider">
@@ -20,11 +20,11 @@
             </fieldTypes>
           </fieldMap>
           <fields hint="raw:AddComputedIndexField">
-            <field fieldName="parsedxblogcategoryname"  storageType="yes"  indexType="untokenized">XBlogHelper.ContentSearch.ComputedFields.ParsedXBlogCategoryName,XBlogHelper</field>
-            <field fieldName="parsedxblogauthorname"  storageType="yes"  indexType="untokenized">XBlogHelper.ContentSearch.ComputedFields.ParsedXBlogAuthorName,XBlogHelper</field>
-            <field fieldName="parsedxblogtagname"  storageType="yes"  indexType="untokenized">XBlogHelper.ContentSearch.ComputedFields.ParsedXBlogTagName,XBlogHelper</field>
+            <field fieldName="parsedxblogcategoryname"  storageType="yes"  indexType="untokenized">Sitecore.Feature.XBlog.Areas.XBlog.ContentSearch.ComputedFields.ParsedXBlogCategoryName,Sitecore.Feature.XBlog</field>
+            <field fieldName="parsedxblogauthorname"  storageType="yes"  indexType="untokenized">Sitecore.Feature.XBlog.Areas.XBlog.ContentSearch.ComputedFields.ParsedXBlogAuthorName,Sitecore.Feature.XBlog</field>
+            <field fieldName="parsedxblogtagname"  storageType="yes"  indexType="untokenized">Sitecore.Feature.XBlog.Areas.XBlog.ContentSearch.ComputedFields.ParsedXBlogTagName,Sitecore.Feature.XBlog</field>
           </fields>
-        </defaultLuceneIndexConfiguration>
+        </defaultSolrIndexConfiguration>
       </indexConfigurations>
     </contentSearch>
   </sitecore>
